# bank_kata

./: LICENSE.md  README.md  pyproject.toml
bank_kata/domain/: accounts.py
bank_kata/interface/: account.py
tests/: test_interce.py
